# GreenHouse

./: .gitmodules  CMakeLists.txt
inc/: DeviceManager.h  SensorManager.h  main.h
src/: DeviceManager.cpp  DeviceManager.h  SensorManager.cpp  SensorManager.h  SimpleLCD.cpp  UIcontroller.cpp  UIcontroller.h  main.cpp  main.h
